--- a/index.html
+++ b/index.html
@@ -1,12 +1,160 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
-  </body>
+    <head>
+        <meta charset="utf-8">
+    <title>Седона</title>
+    </head>
+    <body>
+        <header class="main-header">
+            <div class="container">
+                <nav class="main-navigation">
+                    <ul class="left">
+                        <li>
+                            <a href="#">Информация</a>
+                        </li>
+                        <li>
+                            <a href="#">Фото и видео</a>
+                        </li>
+                        
+                    </ul>
+                    <div class="index-logo">
+                        <img src="img/index-logo.png" width="138" height="70" alt="Седона">
+                    </div>
+                    <ul class="right">
+                        <li>
+                            <a href="#">Карта штата</a>
+                        </li>
+                        <li>
+                            <a href="#">Гостиницы</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <main class="container">
+            <section class="bg-image-top">
+                <img class="image-top" src="img/image-top.png" alt="Добро пожаловать в Седону" width="1200" height="800">
+            </section>
+            <section class="features-preface">
+                <h2>Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</h2>
+                <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд каньон!</p>
+            </section>
+            <section class="features-img">
+                <div class="content third">
+                    <b>Настоящий городок</b>
+                    <span>&mdash; №1 &mdash;</span>
+                    <p>Седона - не аттракцион для туристов,<br>
+                    там течет своя жизнь</p>
+                </div>
+                <div class="image-feature two-third">
+                    <img src="img/image-feature1.png" width="800" height="401" alt="Седона">
+                </div>
+            </section>
+            <section class="feature-icons">
+                <div class="content third">
+                    <img class="appartment" src="img/appartment.png" width="75" height="72" alt="Жилье">
+                    <b>Жилье</b>
+                    <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                </div>
+                <div class="content third">
+                    <img class="food" src="img/food.png" width="74" height="70" alt="Еда">
+                    <b>Еда</b>
+                    <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                </div>
+                <div class="content third">
+                    <img class="gift" src="img/gift.png" width="64" height="76" alt="Сувениры">
+                    <b>Сувениры</b>
+                    <p>Не только китайского, но и местного производства!</p>
+                </div>
+            </section>
+            <section class="features-img">
+                <div class="image-feature two-third">
+                    <img src="img/image-feature1.png" width="800" height="400" alt="Мост дьявола">
+                </div>
+                <div class="content third">
+                    <h2>Там есть мост дьявола</h2>
+                    <span>&mdash; №2 &mdash;</span>
+                    <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+                </div>
+            </section>
+            <section class="features-last">
+                <div class="content third">
+                    <b>Небольшая площадь</b>
+                    <span>&mdash; №3 &mdash;</span>
+                    <p>Все достопримечательности находятся очень близко</p>
+                </div>
+                <div class="content third">
+                    <b>Красивая площадь</b>
+                    <span>&mdash; №4 &mdash;</span>
+                    <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                </div>
+                <div class="content third">
+                    <b>Мало туристов</b>
+                    <span>&mdash; №5 &mdash;</span>
+                    <p>Большинство едет в Гранд Каньон и толпится там</p>
+                </div>
+            </section>
+            <section class="interested">
+                <div class="container">
+                    <h3>Заинтересовались?</h3>
+                    <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения в Седоне</p>
+                </div>
+                <div class="form-container">
+                    <a href="#" class="search-btn">Поиск гостиницы в Седоне</a>
+                    <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
+                        <label for="day-in">Дата заезда:</label>
+                        <input class="date field" type="text" id="day-in" name="day-in" placeholder="24 апреля 2017" required>
+                        <div class="calendar"></div>
+                        <label for="day-out">Дата выезда:</label>
+                        <input class="date field" type="text" id="day-out" name="day-out" placeholder="4 июля 2017" required>
+                        <div class="calendar"></div>
+                        <div class="half-width">
+                            <label for="adults">Взрослые:</label>
+                            <div class="number-container">
+                                <button class="btn minus-btn" type="button">
+                                    <i class="minus-icon">-</i>
+                                </button>
+                                <input class="number field" type="text" name="adults" id="adults" value="2" size="1" required>
+                                <button class="btn plus-btn" type="button">
+                                    <i class="plus-icon">+</i>
+                                </button>
+                            </div>
+                        <div>
+                        <div class="half-width">
+                            <label for="kids">Дети:</label>
+                            <div class="number-container">
+                                <button class="btn minus-btn" type="button">
+                                    <i class="minus-icon">-</i>
+                                </button>
+                                <input class="number field" type="text" name="kids" id="kids" value="9" size="1">
+                                <button class="btn plus-btn" type="button">
+                                    <i class="plus-icon">+</i>
+                                </button>
+                            </div>
+                        <div>
+                        <button class="find-btn" type="button">Найти</button>
+                    </form>
+                </div>
+            </section>
+            <section class="map">
+                <img src="img/map.png" width="1718" height="748" alt="Карта">
+            </section>
+        </main>
+        <footer class="main-footer">
+        <div class="container">
+            <section class="footer-contacts">
+                <a href="#">#visitsedona</a><br>
+            </section>
+            <section class="footer-social">
+                <a class="social-btn social-btn-tw" href="#">Твиттер</a>
+                <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+                <a class="social-btn social-btn-yt" href="#">Youtube</a>
+            </section>
+            <section class="footer-copyright">
+                <span>Website by:</span>
+                <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+            </section>
+        </div>
+    </footer>
+    </body>
 </html>
