--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <a href="#">Карта штата</a>
                         </li>
                         <li>
-                            <a href="#">Гостиницы</a>
+                            <a href="inner.html">Гостиницы</a>
                         </li>
                     </ul>
                 </nav>
@@ -137,7 +137,7 @@
                 </div>
             </section>
             <section class="map">
-                <img src="img/map.png" width="1718" height="748" alt="Карта">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104770.38018730543!2d-111.86517855273749!3d34.85435832354931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sby!4v1492333161551" width="1200" height="487" frameborder="0" style="border:0" allowfullscreen></iframe>
             </section>
         </main>
         <footer class="main-footer">
@@ -152,7 +152,7 @@
             </section>
             <section class="footer-copyright">
                 <span>Website by:</span>
-                <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+                <a class="btn" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
             </section>
         </div>
     </footer>
