--- a/index.html
+++ b/index.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="utf-8">
+
+<head>
+    <meta charset="utf-8">
     <title>Седона</title>
-    </head>
-    <body>
+</head>
+
+<body>
+    <div class="container">
         <header class="main-header">
-            <div class="container">
-                <nav class="main-navigation">
-                    <ul class="left">
-                        <li>
-                            <a href="#">Информация</a>
-                        </li>
-                        <li>
-                            <a href="#">Фото и видео</a>
-                        </li>
-                        
-                    </ul>
-                    <div class="index-logo">
-                        <img src="img/index-logo.png" width="138" height="70" alt="Седона">
-                    </div>
-                    <ul class="right">
-                        <li>
-                            <a href="#">Карта штата</a>
-                        </li>
-                        <li>
-                            <a href="inner.html">Гостиницы</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
+            <nav class="main-navigation">
+                <ul class="nav">
+                    <li>
+                        <a href="#">Информация</a>
+                    </li>
+                    <li>
+                        <a href="#">Фото и видео</a>
+                    </li>
+                    <li>
+                        <a href="#">Карта штата</a>
+                    </li>
+                    <li>
+                        <a href="inner.html">Гостиницы</a>
+                    </li>
+                </ul>
+                <div class="index-logo">
+                    <img src="img/index-logo.png" width="138" height="70" alt="Седона">
+                </div>
+            </nav>
         </header>
-        <main class="container">
+        <main class="index-main">
             <section class="bg-image-top">
                 <img class="image-top" src="img/image-top.png" alt="Добро пожаловать в Седону" width="1200" height="800">
             </section>
@@ -41,10 +39,10 @@
             </section>
             <section class="features-img">
                 <div class="content third">
-                    <b>Настоящий городок</b>
+                    <h2>Настоящий городок</h2>
                     <span>&mdash; №1 &mdash;</span>
-                    <p>Седона - не аттракцион для туристов,<br>
-                    там течет своя жизнь</p>
+                    <p>Седона - не аттракцион для туристов,
+                        <br> там течет своя жизнь</p>
                 </div>
                 <div class="image-feature two-third">
                     <img src="img/image-feature1.png" width="800" height="401" alt="Седона">
@@ -95,7 +93,7 @@
                 </div>
             </section>
             <section class="interested">
-                <div class="container">
+                <div class="interested-container">
                     <h3>Заинтересовались?</h3>
                     <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения в Седоне</p>
                 </div>
@@ -119,31 +117,31 @@
                                     <i class="plus-icon">+</i>
                                 </button>
                             </div>
-                        <div>
-                        <div class="half-width">
-                            <label for="kids">Дети:</label>
-                            <div class="number-container">
-                                <button class="btn minus-btn" type="button">
-                                    <i class="minus-icon">-</i>
-                                </button>
-                                <input class="number field" type="text" name="kids" id="kids" value="9" size="1">
-                                <button class="btn plus-btn" type="button">
-                                    <i class="plus-icon">+</i>
-                                </button>
-                            </div>
-                        <div>
-                        <button class="find-btn" type="button">Найти</button>
-                    </form>
-                </div>
+                            <div>
+                                <form class="search-hotel" action="https://echo.htmlacademy.ru" method="post">
+                                    <div class="half-width">
+                                        <label for="kids">Дети:</label>
+                                        <div class="number-container">
+                                            <button class="btn minus-btn" type="button">
+                                                <i class="minus-icon">-</i>
+                                            </button>
+                                            <input class="number field" type="text" name="kids" id="kids" value="9" size="1">
+                                            <button class="btn plus-btn" type="button">
+                                                <i class="plus-icon">+</i>
+                                            </button>
+                                        </div>
+                                        <button class="find-btn" type="button"><span>Найти</span></button>
+                                </form>
+                                </div>
             </section>
             <section class="map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104770.38018730543!2d-111.86517855273749!3d34.85435832354931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sby!4v1492333161551" width="1200" height="487" frameborder="0" style="border:0" allowfullscreen></iframe>
             </section>
         </main>
         <footer class="main-footer">
-        <div class="container">
             <section class="footer-contacts">
-                <a href="#">#visitsedona</a><br>
+                <a href="#">#visitsedona</a>
+                <br>
             </section>
             <section class="footer-social">
                 <a class="social-btn social-btn-tw" href="#">Твиттер</a>
@@ -154,7 +152,8 @@
                 <span>Website by:</span>
                 <a class="btn" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
             </section>
+        </footer>
         </div>
-    </footer>
-    </body>
+</body>
+
 </html>
