Нарезал графику для проекта и обернул логотип ссылкой
Нарезал графику, обернул логотип  на внутренней странице ссылкой,
подключил контентные изображения, подключил шрифты для body, и тегов h2
разных секций

--- a/inner.html
+++ b/inner.html
@@ -25,7 +25,7 @@
                     </li>
                 </ul>
                 <div class="index-logo">
-                    <img src="img/index-logo.png" width="138" height="70" alt="Седона">
+                    <a href="index.html"><img src="img/logo.png" width="138" height="70" alt="Седона"></a>
                 </div>
             </nav>
         </header>
@@ -93,12 +93,10 @@
             </section>
             <article class="view-results">
                 <div class="photo">
-                    <img src="img/amara.jpeg" width="135" height="90" alt="Amara Resort & Spa">
-                </div>
+                    <a href="#"><img src="img/amara.jpg" width="135" height="90" alt="Amara Resort & Spa"></a>
+    			</div>
                 <div class="hotel-container">
-                    <h2>
-    				<a href="#">Amara Resort & Spa</a>
-    			</h2>
+                    <h2><a href="#">Amara Resort & Spa</a></h2>
                     <div class="hotel-type">
                         <span>Гостиница</span>
                         <span>От 4000 Р.</span>
@@ -120,12 +118,10 @@
             </article>
             <article class="view-results">
                 <div class="photo">
-                    <img src="img/desert.jpeg" width="135" height="90" alt="Desert Quail Inn">
+                    <a href="#"><img src="img/desertquail.jpg" width="135" height="90" alt="Desert Quail Inn"></a>
                 </div>
                 <div class="hotel-container">
-                    <h2>
-    				<a href="#">Desert Quail Inn</a>
-    			</h2>
+                    <h2><a href="#">Desert Quail Inn</a></h2>
                     <div class="hotel-type">
                         <span>Мотель</span>
                         <span>От 3000 Р.</span>
@@ -146,12 +142,10 @@
             </article>
             <article class="view-results">
                 <div class="photo">
-                    <img src="img/villas.jpeg" width="135" height="90" alt="Villas at Poco Diablo">
+                	<a href="#"><img src="img/villasatpoco.jpg" width="135" height="90" alt="Villas at Poco Diablo"></a>
                 </div>
                 <div class="hotel-container">
-                    <h2>
-    				<a href="#">Villas at Poco Diablo</a>
-    			</h2>
+                    <h2><a href="#">Villas at Poco Diablo</a></h2>
                     <div class="hotel-type">
                         <span>Мотель</span>
                         <span>От 2000 Р.</span>
