--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Седона</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -25,13 +26,13 @@
                     </li>
                 </ul>
                 <div class="index-logo">
-                    <img src="img/index-logo.png" width="138" height="70" alt="Седона">
+                    <img src="img/logo.png" width="138" height="70" alt="Седона">
                 </div>
             </nav>
         </header>
         <main class="index-main">
             <section class="bg-image-top">
-                <img class="image-top" src="img/image-top.png" alt="Добро пожаловать в Седону" width="1200" height="800">
+                <img class="image-top" src="img/welcome-text.png" alt="Добро пожаловать в Седону" width="458" height="352">
             </section>
             <section class="features-preface">
                 <h2>Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</h2>
@@ -45,29 +46,29 @@
                         <br> там течет своя жизнь</p>
                 </div>
                 <div class="image-feature two-third">
-                    <img src="img/image-feature1.png" width="800" height="401" alt="Седона">
+                    <img src="img/feature1.jpg" width="800" height="256" alt="Седона">
                 </div>
             </section>
             <section class="feature-icons">
                 <div class="content third">
-                    <img class="appartment" src="img/appartment.png" width="75" height="72" alt="Жилье">
+                    <img class="appartment" src="img/appartment-icon.png" width="75" height="72" alt="Жилье">
                     <b>Жилье</b>
                     <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                 </div>
                 <div class="content third">
-                    <img class="food" src="img/food.png" width="74" height="70" alt="Еда">
+                    <img class="food" src="img/food-icon.png" width="74" height="70" alt="Еда">
                     <b>Еда</b>
                     <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                 </div>
                 <div class="content third">
-                    <img class="gift" src="img/gift.png" width="64" height="76" alt="Сувениры">
+                    <img class="gift" src="img/gift-icon.png" width="64" height="76" alt="Сувениры">
                     <b>Сувениры</b>
                     <p>Не только китайского, но и местного производства!</p>
                 </div>
             </section>
             <section class="features-img">
                 <div class="image-feature two-third">
-                    <img src="img/image-feature1.png" width="800" height="400" alt="Мост дьявола">
+                    <img src="img/devils-bridge.jpg" width="800" height="256" alt="Мост дьявола">
                 </div>
                 <div class="content third">
                     <h2>Там есть мост дьявола</h2>
