Нарезал графику, сделал спрайты, подключил шрифты, отформатировал отступы

--- a/inner.html
+++ b/inner.html
@@ -96,7 +96,9 @@
                     <a href="#"><img src="img/amara.jpg" width="135" height="90" alt="Amara Resort & Spa"></a>
     			</div>
                 <div class="hotel-container">
-                    <h2><a href="#">Amara Resort & Spa</a></h2>
+                    <h2>
+                    	<a href="#">Amara Resort & Spa</a>
+                    </h2>
                     <div class="hotel-type">
                         <span>Гостиница</span>
                         <span>От 4000 Р.</span>
@@ -118,10 +120,14 @@
             </article>
             <article class="view-results">
                 <div class="photo">
-                    <a href="#"><img src="img/desertquail.jpg" width="135" height="90" alt="Desert Quail Inn"></a>
+                    <a href="#">
+                    	<img src="img/desertquail.jpg" width="135" height="90" alt="Desert Quail Inn">
+                    </a>
                 </div>
                 <div class="hotel-container">
-                    <h2><a href="#">Desert Quail Inn</a></h2>
+                    <h2>
+                    	<a href="#">Desert Quail Inn</a>
+                    </h2>
                     <div class="hotel-type">
                         <span>Мотель</span>
                         <span>От 3000 Р.</span>
@@ -142,10 +148,14 @@
             </article>
             <article class="view-results">
                 <div class="photo">
-                	<a href="#"><img src="img/villasatpoco.jpg" width="135" height="90" alt="Villas at Poco Diablo"></a>
+                	<a href="#">
+                		<img src="img/villasatpoco.jpg" width="135" height="90" alt="Villas at Poco Diablo">
+                	</a>
                 </div>
                 <div class="hotel-container">
-                    <h2><a href="#">Villas at Poco Diablo</a></h2>
+                    <h2>
+                    	<a href="#">Villas at Poco Diablo</a>
+                    </h2>
                     <div class="hotel-type">
                         <span>Мотель</span>
                         <span>От 2000 Р.</span>
