Создал сетку для главной и внутренней страниц

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-all">
         <header class="main-header">
             <nav class="main-navigation">
                 <ul class="nav">
@@ -31,7 +31,7 @@
             </nav>
         </header>
         <main class="index-main">
-            <section class="bg-image-top">
+            <section class="bg-image-top clearfix">
                 <img class="image-top" src="img/welcome-text.png" alt="Добро пожаловать в Седону" width="458" height="352">
             </section>
             <section class="features-preface">
@@ -49,7 +49,7 @@
                     <img src="img/feature1.jpg" width="800" height="256" alt="Седона">
                 </div>
             </section>
-            <section class="feature-icons">
+            <section class="feature-icons clearfix">
                 <div class="content third">
                     <img class="appartment" src="img/appartment-icon.png" width="75" height="72" alt="Жилье">
                     <b>Жилье</b>
@@ -73,10 +73,10 @@
                 <div class="content third">
                     <h2>Там есть мост дьявола</h2>
                     <span>&mdash; №2 &mdash;</span>
-                    <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+                    <p>Да, по нему можно пройти! Если конечно <br>вы осмелитесь</p>
                 </div>
             </section>
-            <section class="features-last">
+            <section class="features-last clearfix">
                 <div class="content third">
                     <b>Небольшая площадь</b>
                     <span>&mdash; №3 &mdash;</span>
@@ -93,7 +93,7 @@
                     <p>Большинство едет в Гранд Каньон и толпится там</p>
                 </div>
             </section>
-            <section class="interested">
+            <section class="interested clearfix">
                 <div class="interested-container">
                     <h3>Заинтересовались?</h3>
                     <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения в Седоне</p>
