--- a/inner.html
+++ b/inner.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Седона</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-all">
         <header class="main-header">
             <nav class="main-navigation">
                 <ul class="nav">
@@ -30,25 +31,29 @@
             </nav>
         </header>
         <main class="catalog">
-            <section class="filter">
+            <section class="filter clearfix">
                 <form action="https://echo.htmlacademy.ru" class="filter-form" method="post">
                     <div class="fourth">
-                        <h2>Инфраструктура:</h2>
-                        <input type="checkbox" name="pool" id="pool" checked>
-                        <label for="pool">Бассейн</label>
-                        <input type="checkbox" name="parking" id="parking">
-                        <label for="parking">Парковка</label>
-                        <input type="checkbox" name="wi-fi" id="wi-fi">
-                        <label for="wi-fi">Wi-fi</label>
+                        <fieldset class="infrastructure">
+                            <legend>Инфраструктура:</legend>
+                            <input type="checkbox" name="pool" id="pool" checked>
+                            <label for="pool">Бассейн</label>
+                            <input type="checkbox" name="parking" id="parking">
+                            <label for="parking">Парковка</label>
+                            <input type="checkbox" name="wi-fi" id="wi-fi">
+                            <label for="wi-fi">Wi-fi</label>
+                        </fieldset>
                     </div>
                     <div class="fourth">
-                        <h2>Тип жилья:</h2>
-                        <input type="checkbox" name="hotel" id="hotel" checked>
-                        <label for="hotel">Гостиница</label>
-                        <input type="checkbox" name="motel" id="motel" checked>
-                        <label for="motel">Мотель</label>
-                        <input type="checkbox" name="wi-fi" id="motel" checked>
-                        <label for="motel">Аппартаменты</label>
+                        <fieldset class="accomodation-type">
+                            <legend>Тип жилья:</legend>
+                            <input type="checkbox" name="hotel" id="hotel" checked>
+                            <label for="hotel">Гостиница</label>
+                            <input type="checkbox" name="motel" id="motel" checked>
+                            <label for="motel">Мотель</label>
+                            <input type="checkbox" name="wi-fi" id="motel" checked>
+                            <label for="motel">Аппартаменты</label>
+                        </fieldset>
                     </div>
                     <div class="two-fourth">
                         <h2>Стоимость в сутки(Р):</h2>
@@ -68,7 +73,7 @@
                     </div>
                 </form>
             </section>
-            <section class="results">
+            <section class="results clearfix">
                 <div class="found">
                     <span>Найдено:3</span>
                 </div>
@@ -91,13 +96,13 @@
                     <a class="current down-icon" href="#"></a>
                 </div>
             </section>
-            <article class="view-results">
+            <article class="view-results clearfix">
                 <div class="photo">
                     <a href="#"><img src="img/amara.jpg" width="135" height="90" alt="Amara Resort & Spa"></a>
-    			</div>
+                </div>
                 <div class="hotel-container">
                     <h2>
-                    	<a href="#">Amara Resort & Spa</a>
+                        <a href="#">Amara Resort & Spa</a>
                     </h2>
                     <div class="hotel-type">
                         <span>Гостиница</span>
@@ -118,15 +123,15 @@
                     <span class="ratio">Рейтинг: 8,5</span>
                 </div>
             </article>
-            <article class="view-results">
+            <article class="view-results clearfix">
                 <div class="photo">
                     <a href="#">
-                    	<img src="img/desertquail.jpg" width="135" height="90" alt="Desert Quail Inn">
+                        <img src="img/desertquail.jpg" width="135" height="90" alt="Desert Quail Inn">
                     </a>
                 </div>
                 <div class="hotel-container">
                     <h2>
-                    	<a href="#">Desert Quail Inn</a>
+                        <a href="#">Desert Quail Inn</a>
                     </h2>
                     <div class="hotel-type">
                         <span>Мотель</span>
@@ -148,13 +153,13 @@
             </article>
             <article class="view-results">
                 <div class="photo">
-                	<a href="#">
-                		<img src="img/villasatpoco.jpg" width="135" height="90" alt="Villas at Poco Diablo">
-                	</a>
+                    <a href="#">
+                        <img src="img/villasatpoco.jpg" width="135" height="90" alt="Villas at Poco Diablo">
+                    </a>
                 </div>
                 <div class="hotel-container">
                     <h2>
-                    	<a href="#">Villas at Poco Diablo</a>
+                        <a href="#">Villas at Poco Diablo</a>
                     </h2>
                     <div class="hotel-type">
                         <span>Мотель</span>
