Доработал оформление декоративных элементов
Добавил тень странице при достижении максимальной ширины, на внутренней
странице в разделе сортировки сетку сделал флоатами

--- a/inner.html
+++ b/inner.html
@@ -62,8 +62,8 @@
                                     <label for="motel">Мотель</label>
                                 </div>
                                 <div class="checkbox">
-                                    <input type="checkbox" name="wi-fi" id="motel" checked>
-                                    <label for="motel">Аппартаменты</label>
+                                    <input type="checkbox" name="wi-fi" id="appartment" checked>
+                                    <label for="appartment">Аппартаменты</label>
                                 </div>
                             </fieldset>
                         </div>
@@ -98,7 +98,7 @@
             <section class="results">
                 <div class="inner clearfix">
                     <div class="found">
-                        <span>Найдено:3</span>
+                        <span>Найдено: 3</span>
                     </div>
                     <div class="sorting">
                         <span>Сортировка</span>
