Доработка декоративный элементов (стрелки, рейтинг, форма)

--- a/inner.html
+++ b/inner.html
@@ -191,7 +191,7 @@
                         	<a href="#" class="hotel-name">Villas at Poco Diablo</a>
                         </h2>
                         <div class="hotel-type">
-                            <span>Аппартаменты</span>
+                            <span>Апартаменты</span>
                             <span>От 2000 Р.</span>
                         </div>
                         <section class="info-btn">
@@ -209,7 +209,7 @@
                 </div>
             </article>
         </main>
-        <footer class="main-footer clearfix">
+        <footer class="footer clearfix">
             <section class="footer-contacts">
                 <a href="#">#visitsedona</a>
                 <br>
