--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <img src="img/devils-bridge.jpg" width="800" height="256" alt="Мост дьявола">
                 </div>
                 <div class="item third">
-                    <h2>Там есть мост дьявола</h2>
+                    <h2>Там есть<br>мост дьявола</h2>
                     <span>&mdash; №2 &mdash;</span>
                     <p>Да, по нему можно пройти! Если конечно
                         <br>вы осмелитесь</p>
@@ -149,7 +149,7 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104770.38018730543!2d-111.86517855273749!3d34.85435832354931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sby!4v1492333161551" width="1200" height="487" frameborder="0" style="border:0" allowfullscreen></iframe>
             </section>
         </main>
-        <footer class="main-footer clearfix">
+        <footer class="footer main-footer clearfix">
             <section class="footer-contacts">
                 <a href="#">#visitsedona</a>
                 <br>
