Доработка декоративных элементов
Сверстан фильтр на внутренней, прописаны состояния disabled для
чекбоксов

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             </section>
             <section class="features-preface">
                 <h2>Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</h2>
-                <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд каньон!</p>
+                <p>Раcсмотрим 5 причин, по которым Седона круче, чем Гранд каньон!</p>
             </section>
             <section class="features-img clearfix">
                 <div class="item third">
                     <h2>Настоящий городок</h2>
                     <span>&mdash; №1 &mdash;</span>
-                    <p>Седона - не аттракцион для туристов,
+                    <p>Седона &mdash; не аттракцион для туристов,
                         <br> там течет своя жизнь</p>
                 </div>
                 <div class="image-feature two-third">
