--- a/index.html
+++ b/index.html
@@ -12,25 +12,27 @@
 <body>
     <div class="container-all">
         <header class="main-header">
-            <nav class="main-navigation">
-                <ul class="nav clearfix">
-                    <li>
-                        <a href="#">Информация</a>
-                    </li>
-                    <li>
-                        <a href="#">Фото и видео</a>
-                    </li>
-                    <li>
-                        <a href="inner.html">Гостиницы</a>
-                    </li>
-                    <li>
-                        <a href="#">Карта штата</a>
-                    </li>
-                </ul>
-                <div class="index-logo">
-                    <img src="img/logo.png" width="138" height="70" alt="Седона">
-                </div>
-            </nav>
+            <div class="inner">
+                <nav class="main-navigation">
+                    <ul class="nav clearfix">
+                        <li>
+                            <a href="#">Информация</a>
+                        </li>
+                        <li>
+                            <a href="#">Фото и видео</a>
+                        </li>
+                        <li>
+                            <a href="inner.html">Гостиницы</a>
+                        </li>
+                        <li>
+                            <a href="#">Карта штата</a>
+                        </li>
+                    </ul>
+                    <div class="index-logo">
+                        <img src="img/logo.png" width="138" height="70" alt="Седона">
+                    </div>
+                </nav>
+            </div>
         </header>
         <main class="index-main">
             <section class="bg-image-top">
@@ -146,7 +148,7 @@
                 </div>
             </section>
             <section class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104770.38018730543!2d-111.86517855273749!3d34.85435832354931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sby!4v1492333161551" width="1200" height="487" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104770.38018730543!2d-111.86517855273749!3d34.85435832354931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sby!4v1492333161551" width="1200" height="593" style="border:0" allowfullscreen></iframe>
             </section>
         </main>
         <footer class="footer main-footer clearfix">
