--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Седона</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic">
+    <title>Седона: Главная страница</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
                             <a href="inner.html">Гостиницы</a>
                         </li>
                         <li>
-                            <a href="#">Карта штата</a>
+                            <a href="map.html">Карта штата</a>
                         </li>
                     </ul>
                     <div class="index-logo">
@@ -105,7 +105,7 @@
                         <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
                 </div>
                 <div class="form-container">
-                    <a href="#" class="search-btn">Поиск гостиницы в Седоне</a>
+                    <a class="search-btn" href="search-form.html">Поиск гостиницы в Седоне</a>
                     <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
                         <div class="search-form-line clearfix">
                             <label for="day-in">Дата заезда:</label>
@@ -167,7 +167,7 @@
             </section>
         </footer>
     </div>
-    <script src="js/main.js"></script>
+    <script src="js/main.min.js"></script>
 </body>
 
 </html>
