--- a/inner.html
+++ b/inner.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Седона</title>
+    <title>Седона: Внутренняя страница</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic">
 </head>
 
 <body>
@@ -24,7 +25,7 @@
                             <a class="current">Гостиницы</a>
                         </li>
                         <li>
-                            <a href="#">Карта штата</a>
+                            <a href="map.html">Карта штата</a>
                         </li>
                     </ul>
                     <div class="index-logo">
