Прогрессивное улучшение (форма поиска)
Форма поиска открыта по умолчанию при выключенном js

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
                 </div>
                 <div class="form-container">
-                    <a class="search-btn" href="search-form.html">Поиск гостиницы в Седоне</a>
+                    <a class="search-btn" href="#">Поиск гостиницы в Седоне</a>
                     <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
                         <div class="search-form-line clearfix">
                             <label for="day-in">Дата заезда:</label>
